Refactor to support unit tests